@@ -13737,6 +13737,19 @@ static int _update_job(job_record_t *job_ptr, job_desc_msg_t *job_specs,
 		}
 	}
 
+	if (job_specs->mail_type) {
+		job_ptr->mail_type = job_specs->mail_type;
+		sched_info("%s: setting mail_type to %u for %pJ",
+			   __func__, job_ptr->mail_type, job_ptr);
+	}
+
+	if (job_specs->mail_user) {
+		xfree(job_ptr->mail_user);
+		job_ptr->mail_user = xstrdup(job_specs->mail_user);
+		sched_info("%s: setting mail_user to %s for %pJ",
+			   __func__, job_ptr->mail_user, job_ptr);
+	}
+
 	/*
 	 * The job submit plugin sets site_factor to NO_VAL before calling
 	 * the plugin to prevent the user from specifying it.
